--- a/metadata.yaml
+++ b/metadata.yaml
@@ -42,5 +42,6 @@ subjects:
 - !lcsh 'Science fiction'
 - !lcsh 'Short stories'
 - !lcsh 'Inventions -- Fiction'
+- GITenberg
 title: The Professional Approach
 url: http://www.gutenberg.org/ebooks/23872
